--- a/frontend/register.html
+++ b/frontend/register.html
@@ -3,19 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <title>Tenmo Sign-Up</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
 
 <h1>Sign Up</h1>
 <hr>
-<form action="/api/v1/tenmo/register" method="post">
+<form onsubmit="submitForm(event)">
 
   <div class="fullname">
     <div class="form-group">
       <label for="firstname">First name:</label>
-      <input type="text" id="firstname" name="firstname">
+      <input type="text" id="firstname" name="firstname", required>
     </div>
     <div class="form-group">
       <label for="lastname">Last name:</label>
@@ -29,6 +29,11 @@
   </div>
 
   <div>
+    <label for="email">Email:</label>
+    <input type="email" id="email" name="email">
+  </div>
+
+  <div>
     <label for="password">Password:</label>
     <input type="password" id="password" name="password">
   </div>
@@ -38,14 +43,14 @@
     <input type="password" id="confirm-password" name="confirm-password">
   </div>
 
-  <button type="submit">Sign Up</button>
+  <button type="submit">Register</button>
 </form>
 
-<div class="signin">
-  <p><a href="login.html">Sign in</a></p>
+<div class="login">
+  <p><a href="login.html">Have an account?</a></p>
 </div>
 
-<script src="/js/login.js"></script>
+<script src="js/login.js"></script>
 
 </body>
 </html>
