re-commiting previous changes

--- a/frontend/public/authentication/login.html
+++ b/frontend/public/authentication/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Added viewport for responsive design -->
     <title>PayMe Login</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/authentication/styles.css">
 </head>
 <body>
     <h1>Authenticate</h1>
@@ -23,9 +23,9 @@
     </form>
 
     <div class="register">
-        <p><a href="register.html">Don't have an account?</a></p>
+        <p><a href="/authentication/register.html">Don't have an account?</a></p>
     </div>
 
-    <script src="login.js"></script>
+    <script src="/authentication/login.js"></script>
 </body>
 </html>
