--- a/frontend/public/dashboard/dashboard.html
+++ b/frontend/public/dashboard/dashboard.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PayMe Dashboard</title>
-    <link rel="stylesheet" href="dashboard.css"> 
+    <link rel="stylesheet" href="/dashboard/dashboard.css"> 
 </head>
 <body>
     <div class="header">
@@ -51,6 +51,6 @@
         </div>
     </div>
 
-    <script src="dashboard.js"></script>
+    <script src="/dashboard/dashboard.js"></script>
 </body>
 </html>
