--- a/frontend/public/authentication/register.html
+++ b/frontend/public/authentication/register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Added viewport for responsive design -->
     <title>PayMe Registration</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/authentication/styles.css">
 </head>
 <body>
 
@@ -59,10 +59,10 @@
 </form>
 
 <div class="login">
-    <p><a href="login.html">Have an account?</a></p>
+    <p><a href="/authentication/login.html">Have an account?</a></p>
 </div>
 
-<script src="register.js"></script>
+<script src="/authentication/register.js"></script>
 
 </body>
 </html>
