--- a/frontend/public/dashboard/dashboard.html
+++ b/frontend/public/dashboard/dashboard.html
@@ -28,6 +28,8 @@
     <div id="overlay" class="overlay" onclick="closeNav()"></div>
 
     <div class="main-content">
+        <div id="error-message" style="color: red; text-align: center; margin-bottom: 20px;"></div>
+
         <div class="dashboard">
             
             <div class="card" id="account-info">
