Made small adjustments to frontend. Need to fix backend not building due to issue with Lombok

--- a/frontend/public/authentication/login.html
+++ b/frontend/public/authentication/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Added viewport for responsive design -->
     <title>PayMe Login</title>
-    <link rel="stylesheet" href="/authentication/styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
     <h1>Authenticate</h1>
@@ -26,6 +26,6 @@
         <p><a href="/authentication/register.html">Don't have an account?</a></p>
     </div>
 
-    <script src="/authentication/login.js"></script>
+    <script src="/js/login.js"></script>
 </body>
 </html>
