--- a/frontend/public/dashboard/dashboard.html
+++ b/frontend/public/dashboard/dashboard.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PayMe Dashboard</title>
-    <link rel="stylesheet" href="/dashboard/dashboard.css"> 
+    <link rel="stylesheet" href="/css/dashboard.css">
 </head>
 <body>
     <div class="header">
         <div class="header-left">
             
             <button class="menu-btn" onclick="openNav()">&#9776;</button>
-            <img src="payme-logo.png" alt="PayMe Logo" class="logo">
+            <img src="../assets/payme-logo.png" alt="PayMe Logo" class="logo">
         </div>
         
         <span id="account-name-header">Loading user...</span> 
@@ -53,6 +53,6 @@
         </div>
     </div>
 
-    <script src="/dashboard/dashboard.js"></script>
+    <script src="/js/dashboard.js"></script>
 </body>
 </html>
