--- a/frontend/public/authentication/register.html
+++ b/frontend/public/authentication/register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Added viewport for responsive design -->
     <title>PayMe Registration</title>
-    <link rel="stylesheet" href="/authentication/styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
 
