adjusted database entity relationships and fixed the issues with not being able to build.

--- a/frontend/public/authentication/register.html
+++ b/frontend/public/authentication/register.html
@@ -62,7 +62,7 @@
     <p><a href="/authentication/login.html">Have an account?</a></p>
 </div>
 
-<script src="/authentication/register.js"></script>
+<script src="/js/register.js"></script>
 
 </body>
 </html>
